--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,5 +2,6 @@ body {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgb(4, 4, 194);
+  padding: 5%;
   color: blanchedalmond;
 }
