--- a/styles/week.css
+++ b/styles/week.css
@@ -1,5 +1,8 @@
 body {
   background-color: rgb(202, 240, 240);
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 18;
+  padding: 5%;
+}
+p {
+  font-size: 16px;
 }
