--- a/team1/team1w08/styles.css
+++ b/team1/team1w08/styles.css
@@ -6,6 +6,9 @@
   --swgreen: #334e30;
   font-family: "Roboto", sans-serif;
 }
+/*.hidden {
+  display: none;
+}*/
 body {
   background-color: var(--swgrey);
 }
@@ -41,4 +44,12 @@ a {
   color: var(--swblue);
   font-weight: 900;
   padding: 1em;
+}
+#detailsContainer {
+  background-color: var(--swblue);
+  color: yellow;
+  padding: 0.5em;
+}
+dd {
+  font-weight: 700;
 }
