--- a/team1/team1w08/styles.css
+++ b/team1/team1w08/styles.css
@@ -55,7 +55,7 @@ dt {
   clear: left;
   width: 110px;
   font-weight: bold;
-  color: black;
+  color: rgb(227, 229, 232);
 }
 dd {
   margin: 0 0 0 80px;
