--- a/jwfarm/style.css
+++ b/jwfarm/style.css
@@ -2,7 +2,13 @@
   font-size: 14px;
 }
 body {
-  background-color: rgb(210, 244, 255);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 25%,
+    rgb(191, 237, 247) 100%
+  );
   font: 1em sans-serif;
   width: 350px;
   padding: 0;
@@ -12,12 +18,70 @@ h1,
 h2,
 h3 {
   font-family: "Times New Roman", Times, serif;
+  color: yellow;
+  text-align: center;
+}
+h1 {
+  margin-bottom: none;
+}
+h2 {
+  margin-top: -0.9em;
+}
+div.h3 {
+  display: grid;
+  grid-template-columns: 3.5fr 1fr;
+  align-items: baseline;
+}
+h3 {
+  margin: 0.4em;
+  font-size: 1.5rem;
+  grid-column: 1;
+}
+div.h3 button {
+  width: 1.8em;
+  height: 1.8em;
+  grid-column: 2;
+  padding: 0;
+  margin-top: 1.5em;
+}
+button {
+  border-style: ridge;
+  background-color: rgba(227, 240, 248, 0.999);
+}
+img {
+  background-color: rgb(91, 138, 41);
+  max-width: 100%;
 }
 #weatherDiv {
-  line-height: 0.5em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-items: start;
+  align-items: center;
+  background-color: rgb(222, 246, 242);
+  border: 1px solid #333;
+  padding: 0.5em;
+}
+#weatherDiv p {
+  line-height: 0em;
+}
+#p1 {
+  grid-column: 1/2;
+  grid-row: 1;
+}
+#p2 {
+  grid-column: 2/3;
+  grid-row: 1;
+}
+#p3 {
+  grid-column: 1/3;
+  grid-row: 2;
+}
+#p4 {
+  grid-column: 1/3;
+  grid-row: 3;
 }
 #p1 span {
-  color: blue;
 }
 .active {
   display: inline-block;
@@ -25,24 +89,39 @@ h3 {
 .hidden {
   display: none;
 }
-ul#eventsUl {
-  margin-top: -1.5em;
-}
+
 ul {
   font-size: 0.9em;
   margin: 0;
   padding: 0;
 }
+ul#eventsUl {
+  margin-top: -0.6em;
+  color: yellow;
+}
+ul#worklogsList li {
+  display: grid;
+  grid-template-columns: 3.8fr 4fr 1fr 1fr;
+  justify-items: start;
+  align-items: start;
+}
+label {
+  font-weight: 700;
+}
 li {
   list-style-type: none;
   line-height: 1.2em;
+}
+form {
+  margin-top: 1em;
+  line-height: 1.75em;
 }
 input {
   width: 100%;
   border: 1px solid #333;
   margin: 0;
   font-family: inherit;
-  font-size: 90%;
+  font-size: 1.5em;
   box-sizing: border-box;
 }
 input:valid {
@@ -50,17 +129,29 @@ input:valid {
 input:invalid {
   border-color: #900;
   background-color: #fdd;
-  box-shadow: 0 0 5px 1px red;
+  box-shadow: 0 0 5px 1px darkblue;
 }
 input:focus:invalid {
   box-shadow: none;
 }
 input:required {
-  background-color: rgba(188, 228, 253, 0.999);
+  background-color: rgba(227, 240, 248, 0.999);
+}
+.error {
+  width: 100%;
+  width: 100%;
+  padding: 0;
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+  box-sizing: border-box;
 }
 button#addNewWorklog {
+  background-color: darkblue;
+  color: yellow;
   width: 100%;
   margin-top: 0.75em;
   margin-bottom: 0.75em;
-  border-style: ridge;
+  padding: 1em;
 }
