120722c moved delete button to left side

--- a/jwfarm/style.css
+++ b/jwfarm/style.css
@@ -50,7 +50,7 @@ button {
   height: 1.8em;
 }
 img {
-  background-color: rgb(91, 138, 41);
+  background-color: rgba(227, 240, 248, 0.999);
   max-width: 100%;
 }
 #weatherDiv {
@@ -102,9 +102,11 @@ ul#eventsUl {
 }
 ul#worklogsList li {
   display: grid;
-  grid-template-columns: 0.5fr 3.8fr 4fr 1fr;
+  grid-template-columns: 1.5fr 3fr 8fr 1fr;
   justify-items: start;
   align-items: center;
+  line-height: 1.25em;
+  padding-top: 0.5em;
 }
 label {
   font-weight: 700;
@@ -112,6 +114,7 @@ label {
 li {
   list-style-type: none;
   line-height: 1.2em;
+  max-width: 100%;
 }
 form {
   margin-top: 1em;
@@ -151,8 +154,8 @@ input:required {
 button#addNewWorklog {
   background-color: darkblue;
   color: yellow;
+  font-size: 1.6em;
   width: 100%;
-  margin-top: 0.75em;
+  margin-top: 0.5em;
   margin-bottom: 0.75em;
-  padding: 1.75em;
 }
