--- a/jwfarm/style.css
+++ b/jwfarm/style.css
@@ -146,10 +146,14 @@ input:required {
   width: 100%;
   padding: 0;
   font-size: 80%;
+  text-align: center;
   color: white;
   background-color: #900;
   border-radius: 0 0 5px 5px;
   box-sizing: border-box;
+}
+.error.active {
+  padding: 0.3em;
 }
 button#addNewWorklog {
   background-color: darkblue;
